@@ -28,7 +28,6 @@ using System.Text;
 using NDesk.DBus;
 using org.freedesktop.DBus;
 using org.freedesktop.Telepathy;
-using Tapioca;
 
 namespace Banter
 {
@@ -44,11 +43,6 @@ namespace Banter
 		private uint peerWindowID;
 		private List<Message> messages;
 		private Account account;
-		private Tapioca.Connection tapConnection;
-		private Tapioca.TextChannel tapTextChannel;
-		private Tapioca.StreamChannel tapStreamChannel;
-		private Tapioca.StreamAudio tapAudioStream;
-		private Tapioca.StreamVideo tapVideoStream;
 		private org.freedesktop.Telepathy.IConnection tlpConnection;
 		private org.freedesktop.Telepathy.IChannelText txtChannel;
 		private ProviderUser peerUser;
@@ -57,11 +51,6 @@ namespace Banter
 		private uint current;
 		private uint last;
 	
-		public Tapioca.UserContact MeContact
-		{
-			get {return tapConnection.Info;}
-		}
-		
 		public ProviderUser PeerUser
 		{
 			get {return peerUser;}
@@ -90,16 +79,6 @@ namespace Banter
 		#endregion
 		
 		#region Private Methods
-		private void OnTextChannelClosed (Tapioca.Channel sender)
-		{
-			Logger.Debug ("Conversation::OnTextChannelClosed - called");
-			if ( tapTextChannel != null)
-			{
-				tapTextChannel.Close();
-				tapTextChannel = null;
-			}
-		}
-		
 		/// <summary>
 		/// Signal called when presence changes for the peer user.
 		/// </summary>
@@ -127,49 +106,12 @@ namespace Banter
 							user.Presence.Message);
 					systemMessage = new Banter.SystemMessage (msg);
 					
-					/*
-					MessageReceived (this, systemMessage);
-					msg = String.Format("{0}'s new status \"{1}\"", displayName, user.Presence.Message); 
-					systemMessage = new Banter.SystemMessage (msg);
-					*/
 				} else {
 					msg = String.Format("{0} is {1}", displayName, user.Presence.Name); 
 					systemMessage = new Banter.SystemMessage (msg);
 				}
 			}
 
-			/*
-			if (user.Presence.Type != lastPeerPresence.Type) {
-				if (user.Presence.Type == Banter.PresenceType.Offline) {
-					msg = String.Format("{0} has gone {1}", displayName, user.Presence.Name); 
-					systemMessage = new Banter.SystemMessage (msg);
-				} else {
-					if (user.Presence.Message != null && 
-						user.Presence.Message != String.Empty &&
-						user.Presence.Message != lastPeerPresence.Message) {
-					
-						msg = String.Format(
-								"{0} is {1} \"{2}\"", 
-								displayName, 
-								user.Presence.Name,
-								user.Presence.Message);
-						systemMessage = new Banter.SystemMessage (msg);
-						
-					} else {
-						msg = String.Format("{0} is {1}", displayName, user.Presence.Name); 
-						systemMessage = new Banter.SystemMessage (msg);
-					}
-				}
-			
-			} else {
-				
-				if (user.Presence.Message != null && user.Presence.Message != String.Empty) {
-					msg = String.Format("{0}'s new status \"{1}\"", displayName, user.Presence.Message); 
-					systemMessage = new Banter.SystemMessage (msg);
-				}
-			}
-			*/
-			
 			lastPeerPresence = user.Presence;
 			
 			// Indicate the message to registered handlers
@@ -206,210 +148,6 @@ namespace Banter
 				}
 			}
 		}
-
-		/*
-		private void OnMessageReceivedHandler (
-			ProviderUser sender,
-			TextMessage txtMessage)
-		{
-			Logger.Debug ("Conversation::OnMessageReceivedHandler - called");
-	
-			messages.Add (txtMessage);
-			
-			if (current != 0) last = current;
-			current = this.peerUser.ID;
-			
-			// Indicate the message to registered handlers
-			if (MessageReceived != null){
-				MessageReceived (this, txtMessage);
-			}
-		}
-		*/
-		
-		private void OnTapiocaMessageReceivedHandler (
-			Tapioca.TextChannel sender,
-			Tapioca.TextChannelMessage message)
-		{
-			Logger.Debug ("Conversation::OnTapiocaMessageReceiveHandler - called");
-		
-			TextMessage txtMessage = new TextMessage (message.Contents);
-			txtMessage.From = this.peerUser.Uri;
-			txtMessage.To = this.tapConnection.Info.Uri;
-			messages.Add (txtMessage);
-			
-			if (current != 0)
-				last = current;
-			current = this.peerUser.Contact.Handle.Id;
-			
-			// Indicate the message to registered handlers
-			if (MessageReceived != null){
-				MessageReceived (this, txtMessage);
-			}
-		}
-		
-		private void SetVideoStream (StreamVideo video)
-        {
-			if (video == null)
-			{
-				if (tapVideoStream != null)
-				{
-					tapVideoStream.StateChanged -= OnVideoStreamStateChanged;
-					tapVideoStream.Error -= OnMediaStreamError;
-					tapVideoStream = null;
-				}	
-			} 
-			else
-			{
-				if (tapVideoStream != null) return;
-				
-				Logger.Debug ("Setting up video stream - once per channel");
-				tapVideoStream = video;
-				tapVideoStream.WindowPreviewID = this.previewWindowID;
-				tapVideoStream.StateChanged += OnVideoStreamStateChanged;
-				tapVideoStream.Error += OnMediaStreamError;
-			}
-		}
-
-		private void SetAudioStream (StreamAudio audio)
-		{
-			if (audio == null)
-			{
-				if (tapAudioStream != null)
-				{
-					tapAudioStream.StateChanged -= OnAudioStreamStateChange;
-					tapAudioStream.Error -= OnMediaStreamError;
-					tapAudioStream = null;
-				}
-				return;
-			}
-			else
-			{
-				if (this.tapAudioStream != null) return;
-				tapAudioStream = audio;
-				tapAudioStream.StateChanged += OnAudioStreamStateChange;
-				tapAudioStream.Error += OnMediaStreamError;
-			}
-		}
-		
-		private void OnStreamChannelClosed (Tapioca.Channel channel)
-		{
-			Logger.Debug ("Conversation::OnStreamChannelClosed");
-
-			if (channel == tapStreamChannel)
-			{
-				if (tapAudioStream != null)
-				{
-					Logger.Debug ("  releasing audio stream");
-					tapStreamChannel.ReleaseStream (tapAudioStream);
-					tapAudioStream = null;
-				}
-				
-				if (tapVideoStream != null)
-				{
-					Logger.Debug ("  releasing video stream");
-					tapStreamChannel.ReleaseStream (tapVideoStream);
-					tapVideoStream = null;
-				}
-			}
-		}
-		
-		private void OnMediaStreamError (StreamObject stream, uint error, string message)
-		{
-			Logger.Debug ("Conversation::OnMediaStreamError - called");
-			Logger.Debug ("  Error: {0}", error);
-			Logger.Debug ("  Message: {0}", message);
-		}
-		
-		private void OnStreamLost (StreamChannel streamChannel, StreamObject stream)
-		{
-			Logger.Debug ("Conversation::OnStreamLost - called");
-			switch (stream.Type)
-			{
-				case Tapioca.StreamType.Audio:
-				{
-					Logger.Debug ("  audio stream lost");
-					SetAudioStream (null);
-					break;
-				}
-				
-				case Tapioca.StreamType.Video:
-				{
-					Logger.Debug ("  video stream lost");
-					SetVideoStream (null);
-					break;
-				}
-			}
-		}
-		
-		private void OnNewStream (StreamChannel streamChannel, StreamObject stream)
-		{
-			Logger.Debug ("Conversation::OnNewStream - called");
-
-			switch (stream.Type)
-			{
-				case Tapioca.StreamType.Audio:
-				{
-					SetAudioStream (stream as StreamAudio);
-					break;
-				}
-				
-				case Tapioca.StreamType.Video:
-				{
-					SetVideoStream (stream as StreamVideo);
-					break;
-				}
-			}
-		}
-
-		private void OnAudioStreamStateChange (StreamObject sender, Tapioca.StreamState state)
-		{
-			switch (state)
-			{
-				case Tapioca.StreamState.Connecting:
-				{
-					Logger.Debug ("  audio stream connecting");
-					break;
-				}
-				
-				case Tapioca.StreamState.Connected:
-				{
-					Logger.Debug ("  audio stream connected");
-					break;
-				}
-				
-				case Tapioca.StreamState.Stopped:
-				{
-					Logger.Debug ("  audio stream stopped");
-					break;
-				}
-			}
-		}
-	
-		private void OnVideoStreamStateChanged (StreamObject sender, Tapioca.StreamState state)
-		{
-			switch (state)
-			{
-				case Tapioca.StreamState.Connecting:
-				{
-					Logger.Debug ("  video stream connecting");
-					//tapVideoStream.WindowPreviewID = previewWindowID;
-					tapVideoStream.WindowID = peerWindowID;
-					break;
-				}
-				
-				case Tapioca.StreamState.Connected:
-				{
-					Logger.Debug ("  video stream connected");
-					break;
-				}
-				
-				case Tapioca.StreamState.Stopped:
-				{
-					Logger.Debug ("  video stream stopped");
-					break;
-				}
-			}
-		}
 		
 		private void OnTextChannelClosed()
 		{
@@ -425,26 +163,10 @@ namespace Banter
 				txtChannel.Close();
 				txtChannel = null;
 			}
-			
-			if (tapStreamChannel != null)
-			{
-				StopVideoChat ();
-				this.tapStreamChannel.Close();
-				tapStreamChannel = null;
-			}
-			
-			if (tapTextChannel != null)
-			{
-				tapTextChannel.Close();
-				tapTextChannel = null;
-			}
 		}
 		
 		public Banter.Message[] GetReceivedMessages()
 		{
-//			if (messages.Count == 0)
-//				return null;
-			
 			return messages.ToArray();
 		}
 		
@@ -491,16 +213,6 @@ namespace Banter
 			this.peerWindowID = peerID;
 		}
 		
-		public void SetStreamedMediaChannel (Tapioca.StreamChannel channel)
-		{
-			if (this.tapStreamChannel != null) return;
-			tapStreamChannel = channel;
-			
-			tapStreamChannel.Closed += OnStreamChannelClosed;
-			tapStreamChannel.LostStream += OnStreamLost;
-			tapStreamChannel.NewStream += OnNewStream;
-		}
-		
 		private void CreateTextChannel()
 		{
 			if (txtChannel != null) return;
@@ -515,135 +227,6 @@ namespace Banter
 				
 			txtChannel = Bus.Session.GetObject<IChannelText> (account.BusName, op);
 			txtChannel.Received += OnReceiveMessageHandler;
-			
-			/*
-			ObjectPath op = tlpConnection.RequestChannel (
-				org.freedesktop.Telepathy.ChannelType.Text,
-				org.freedesktop.Telepathy.dfd,
-				this.peerUser.ID,
-				true);
-			*/	
-				
-				
-				
-			/*
-			if (tapTextChannel != null) return;
-			tapTextChannel = 
-				tapConnection.CreateChannel (
-					Tapioca.ChannelType.Text,
-					peerUser.Contact) as Tapioca.TextChannel;
-					
-			tapTextChannel.Closed += OnTextChannelClosed;
-			tapTextChannel.MessageReceived += OnTapiocaMessageReceivedHandler;
-			*/
-		}
-		
-		public void StartAudioChat ()
-		{
-			Logger.Debug ("Conversation::StartAudioChat - called");
-			if (this.tapStreamChannel == null)
-			{
-				Logger.Debug ("tapStreamChannel == null - creating");
-				this.tapStreamChannel =
-					tapConnection.CreateChannel (
-						Tapioca.ChannelType.StreamedMedia,
-						peerUser.Contact) as Tapioca.StreamChannel;
-			}
-			
-			if (this.tapAudioStream == null)
-			{
-				Logger.Debug ("tapAudioStream == null - creating");
-				tapAudioStream =
-					this.tapStreamChannel.RequestStream (
-						Tapioca.StreamType.Audio, 
-						this.PeerUser.Contact) as StreamAudio;
-						
-				tapAudioStream.Play();
-			}
-		}
-		
-		public void StartVideoChat ()
-		{
-			Logger.Debug ("Conversation::StartVideoChat - called");
-			if (this.tapStreamChannel == null)
-			{
-				Logger.Debug ("tapStreamChannel == null - creating");
-				this.tapStreamChannel =
-					tapConnection.CreateChannel (
-						Tapioca.ChannelType.StreamedMedia,
-						peerUser.Contact) as Tapioca.StreamChannel;
-			}
-			
-			if (this.tapVideoStream == null)
-			{
-				Logger.Debug ("tapVideoStream == null - creating");
-				StreamObject[] streams =
-					this.tapStreamChannel.RequestFullStream (this.PeerUser.Contact);
-				foreach (StreamObject so in streams)
-				{
-					switch (so.Type)
-					{
-						case Tapioca.StreamType.Audio:
-						{
-							SetAudioStream (so as StreamAudio);
-							break;
-						}
-						
-						case Tapioca.StreamType.Video:
-						{
-							SetVideoStream (so as StreamVideo);
-							break;
-						}
-					}
-				}
-				
-				if (tapVideoStream != null)
-					tapVideoStream.Play();
-					
-				if (tapAudioStream != null)
-					tapAudioStream.Play();
-			}
-		}
-		
-		public void StopAudioChat()
-		{
-			try
-			{
-				if (tapStreamChannel != null)
-				{
-					if (tapAudioStream != null)
-					{
-						tapStreamChannel.ReleaseStream (tapAudioStream);
-						tapAudioStream = null;
-					}
-				}
-			}
-			catch (Exception svc)
-			{
-				Logger.Debug (svc.Message);
-				Logger.Debug (svc.StackTrace);
-			}
-		}
-		
-		public void StopVideoChat()
-		{
-			try
-			{
-				if (tapStreamChannel != null)
-				{
-					StopAudioChat ();
-					if (tapVideoStream != null)
-					{
-						tapStreamChannel.ReleaseStream (tapVideoStream);
-						tapVideoStream = null;
-					}
-				}
-			}
-			catch (Exception svc)
-			{
-				Logger.Debug (svc.Message);
-				Logger.Debug (svc.StackTrace);
-			}
 		}
 		#endregion
 	}
